$Id$

2.0.14-pre-1
	Fixed missing word in startup message
	Better 'status' command
	Use '+' for popwin corners when 'fancylines' is off
	
2.0.13
	Changed startup message for new mailing list
	blist now prints AIM info even if .anyone is unreadable
	Catch SIGPIPE and print an error rather than crashing.
	        [It's possible that this may have some portability 
		issues under Solaris and we may need to add some 
		configure stuff around SA_SIGINFO...]
	Handle the case in aim_bstream_send where aim_send returns -1,
	        although there is likely an underlying problem here
		that would lead to this case.
	Print the username on aim login failure, not something random like
	        the password.  ;)
	Un-word-wrap text when sending AIM messages.
	Replace the main loop continue in the keyboard handler with an else.
	
2.0.12
	Command history now doesn't allow the last entry
	   to be repeated
	If format_msg returns "" print "<unformatted message>"
	Better align oneline admin and loopback messages
	Print an admin message indicating when subscriptions can
	   not be loaded on startup
	Set aim_ignorelogin_timer to 15 by default
	Admin message on login/logout of AIM
	Fixed double quoting in smartzpunt
	Added timestamp to login/logout messages
	Fixed replies to loopback messages
	Fixed smartnarrow on classes/instances with spaces
	Added the 'loggingdirection' variable
	All loopback messages log to 'loopback' now
	Print an error message if trying an invalid color for a filter
	Fixed bug causing > not to go to end of editwin every time
	
2.0.11
	Updated basic help
	Display CC: in outgoing CC messages
	More AIM logout detection
	Don't proclaim "interfaces changed" on first build.
	Added the 'loopback' message type
	Added the 'loopwrite' command
	Added a timestamp to the default style
	Zpunt now works with weird regex characters
	Smart filters now work with weird regex characters
	
2.0.10
	Allow 'hostname' in filters.
	Fixed bug in reporting when no one is subbed to a class